src/test/ui/mut/mut-pattern-mismatched.stderr
error[E0308]: mismatched types
  --> $DIR/mut-pattern-mismatched.rs:6:10
   |
LL |      let &_
   |          ^^ types differ in mutability
   |
   = note: expected mutable reference `&mut {integer}`
                      found reference `&_`

error[E0308]: mismatched types
  --> $DIR/mut-pattern-mismatched.rs:15:9
   |
LL |     let &mut _
   |         ^^^^^^ types differ in mutability
   |
   = note:      expected reference `&{integer}`
           found mutable reference `&mut _`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
